# regmsg

./: .editorconfig  Cargo.toml  Dockerfile  Dockerfile.x86_64  LICENSE  Makefile  README.md  build-cpp-client.sh  build.rs  docker-compose.yml  regmsg.cpp
build-scripts/: docker-build.sh
init/: S06regmsgd
lib/: drmhook.c
src/: main.rs
src/screen/: kmsdrm.rs  mod.rs  wayland.rs
tools/: regmsg_shell.py
