[package]
name = "regmsg"
version = "0.0.4"
edition = "2024"
authors = ["Juliano Dorigão <jdorigao@gmail.com>"]
description = "Manages screen resolution and display settings"
license = "MIT"
repository = "https://github.com/jdorigao/regmsg"
documentation = "https://github.com/jdorigao/regmsg#readme"
homepage = "https://github.com/jdorigao"
readme = "README.md"
keywords = ["display", "resolution", "drm", "sway", "wayland"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.28"
simplelog = "0.12.2"
chrono = "0.4.42"
zmq = { version = "0.10", default-features = false } 
#, features = ["libzmq"] }
#zeromq-src = "0.3.6"
serde_json = "1.0.145"
clap = { version = "4.5.32", features = ["derive"] }

[dependencies.drm]
version = "0.14.1"
optional = true

[dependencies.swayipc]
version = "3.0.3"
optional = true

[dependencies.image]
version = "0.25.8"
optional = true

[features]
cli = []
daemon = ["drm", "swayipc", "image"]

[build-dependencies]
cc = "1.2.36"
pkg-config = "0.3.32"

[profile.release]
lto = true          # Enable Link Time Optimization for smaller binaries
codegen-units = 1   # Better optimization with single codegen unit
panic = "abort"     # Smaller binaries by removing panic infrastructure (no backtrace)
opt-level = 3       # Maximum optimization for performance
debug = false       # Strips all debuginfo
strip = "symbols"   # Remove debug symbols to reduce binary size
incremental = false # For final release builds

[[bin]]
name = "regmsg"
path = "src/bin/cli/main.rs"

[[bin]]
name = "regmsgd"
path = "src/bin/daemon/main.rs"
