[package]
name = "regmsg"
version = "0.0.4"
edition = "2024"
authors = ["REG-Linux Team"]
description = "Manages screen resolution and display settings"
license = "MIT"
repository = "https://github.com/REG-Linux/regmsg"
documentation = "https://github.com/REG-Linux/regmsg/blob/main/README.md"
homepage = "https://reglinux.org/"
readme = "README.md"
keywords = ["display", "resolution", "drm", "sway", "wayland"]
categories = ["command-line-utilities"]

[dependencies]
async-std = "1.13"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
zeromq = { version = "0.4", default-features = false, features = [
    "async-std-runtime",
    "all-transport",
] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dependencies.drm]
version = "0.14"
optional = true

[dependencies.swayipc]
version = "3.0"
optional = true

[dependencies.image]
version = "0.25"
optional = true

[features]
cli = []
daemon = ["drm", "swayipc", "image"]

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[profile.release]
lto = true          # Enable Link Time Optimization for smaller binaries
codegen-units = 1   # Better optimization with single codegen unit
panic = "abort"     # Smaller binaries by removing panic infrastructure (no backtrace)
opt-level = 3       # Maximum optimization for performance
debug = false       # Strips all debuginfo
strip = "symbols"   # Remove debug symbols to reduce binary size
incremental = false # For final release builds

[[bin]]
name = "regmsg"
path = "src/bin/cli/main.rs"

[[bin]]
name = "regmsgd"
path = "src/bin/daemon/main.rs"
