[package]
name = "regmsg"
version = "0.0.4"
edition = "2024"
authors = ["REG-Linux Team"]
description = "Multi-purpose system manager for REG Linux"
license = "MIT"
repository = "https://github.com/REG-Linux/regmsg"
homepage = "https://reglinux.org/"
keywords = ["display", "resolution", "drm", "sway", "wayland"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
signal-hook-async-std = "0.3"
futures = "0.3"
chrono = "0.4"
thiserror = "2.0"
toml = "0.9"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.async-std]
version = "1.13"
features = ["attributes"]

[dependencies.zeromq]
version = "0.4"
default-features = false
features = ["async-std-runtime", "all-transport"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.drm]
version = "0.14"
optional = true

[dependencies.swayipc]
version = "4.0"
optional = true

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["cli", "daemon"]
cli = []
daemon = ["drm", "swayipc"]

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[profile.release]
lto = true          # Enable Link Time Optimization for smaller binaries
codegen-units = 1   # Better optimization with single codegen unit
panic = "abort"     # Smaller binaries by removing panic infrastructure (no backtrace)
opt-level = 3       # Maximum optimization for performance
debug = false       # Strips all debuginfo
strip = "symbols"   # Remove debug symbols to reduce binary size
incremental = false # For final release builds

[[bin]]
name = "regmsg"
path = "src/bin/cli/main.rs"

[[bin]]
name = "regmsgd"
path = "src/bin/daemon/main.rs"
